[package]
name = "tessellate"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
serenity = { version = "0.11.6", default-features = false, features = [
  "cache",
  "client",
  "gateway",
  "rustls_backend",
  "model",
] }
tabled = "0.14.0"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
totp-rs = "5.3.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = "2.4.1"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
